--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,6 @@
     <string name="app_name">Internshala Workshop</string>
     <string name="logout_btn">logout_btn</string>
     <string name="welcome">Welcome</string>
-    <string name="enrolled">Enrolled</string>
+    <string name="enrolled">Enrolled workshops</string>
     <string name="workshops">Workshops</string>
 </resources>
